GNU Astronomy Utilities NEWS                          -*- outline -*-

Copyright (C) 2015-2024 Free Software Foundation, Inc.
See the end of the file for license conditions.

* Noteworthy changes in release X.XX (library XX.X.X) (YYYY-MM-DD)
** New publications
** New features
*** Arithmetic

  --append: if the output file already exists, don't delete it, add the
    outputs as extra HDUs (by default, the output file is deleted). If the
    output does not exist, then this option has no affect.

  - New operators (also avaialble in "Column Arithmetic" of the Table
    progam):

    - jy-to-wavelength-flux-density: converts Janskys to wavelength flux
      density (erg/cm^2/s/Å) at the given wavelength.

    - filter-madclip-mean: filter/smooth the input using MAD-clipped mean.

    - filter-madclip-median: filter/smooth the input using MAD-clipped
      median.

    - free: free (from memory) the top operand on the stack of
      operands. This is useful in combination with operators that produce
      more than one output operand.

    - madclip-maskfilled: mask (set to NaN) all input elements that are
      outliers (defined by MAD-clipping). Combined with the stacking
      operators this allows removing large contiugous outliers in your
      final stacked datasets.

    - siglclip-maskfilled: similar to 'madclip-maskfilled', but defining
      outliers by Sigma-clipping.

    - zeropoint-change: change the zero point of the input data set to a
      new zero point.

*** Statistics

  --concentration: measure the "concentration" of values in a distribution
    around the median. See the book for the full description of this
    option.

*** astscript-fits-view
  --globalhdu: use the same HDU in any number of input files (with the
    short format of '-g'); similar to the same option in Arithmetic or
    ConvertType.

  --ds9region: load any number of DS9 region files (separated by comas and